<resources>
    <string name="app_name">TbcHomework14</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_orders">My Orders</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>
    <string name="vertical_bar">|</string>
    <string name="leave_a_review">Leave a Review</string>
    <string name="black">Black</string>
    <string name="qty">Qty =</string>
    <string name="dollar">$</string>
    <string name="how_is_your_order">How is Your Order?</string>
    <string name="please_give_your_rating_amp_also_your_review"><![CDATA[Please give your rating & also your review]]></string>
    <string name="write_a_product_review">Write a Product Review</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="leave_review">Leave Review</string>
    <string name="your_review_is_empty">Your Review Is Empty</string>
</resources>