<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragment.ItemDetailFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/leave_a_review"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivItem"
                android:layout_width="90dp"
                android:layout_height="120dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="Modern Wingback"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/ivItem"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivItemColor"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@+id/ivItem"
                app:layout_constraintTop_toBottomOf="@+id/tvItemName"
                app:srcCompat="@drawable/item_color_detector" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvItemColorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:text="@string/black"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintStart_toEndOf="@+id/ivItemColor"
                app:layout_constraintTop_toBottomOf="@+id/tvItemName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVerticalBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/vertical_bar"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/tvItemColorName"
                app:layout_constraintTop_toBottomOf="@+id/tvItemName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/qty"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintStart_toEndOf="@+id/tvVerticalBar"
                app:layout_constraintTop_toBottomOf="@+id/tvItemName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvQuantityNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="2"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintStart_toEndOf="@+id/tvQuantity"
                app:layout_constraintTop_toBottomOf="@+id/tvItemName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvItemStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/item_status_background"
                android:padding="10dp"
                android:text="@string/completed"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/ivItem"
                app:layout_constraintTop_toBottomOf="@+id/ivItemColor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/dollar"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/ivItem"
                app:layout_constraintTop_toBottomOf="@+id/tvItemStatus" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="280.00"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/tvCurrency"
                app:layout_constraintTop_toBottomOf="@+id/tvItemStatus" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/horizontalLine1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <View
        android:id="@+id/horizontalLine2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <View
        android:id="@+id/horizontalLine3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etReview" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOrderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/how_is_your_order"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalLine2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/please_give_your_rating_amp_also_your_review"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOrderTitle" />


    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:progressBackgroundTint="@color/white"
        android:progressTint="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/product_review_edit_text_background"
        android:drawableEnd="@drawable/icon_gallery"
        android:hint="@string/write_a_product_review"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_cancel_background"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/btnSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_submit_background"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLine3" />


</androidx.constraintlayout.widget.ConstraintLayout>