<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="220dp"
        app:cardCornerRadius="35dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivItem"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="Modern Wingback"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@+id/ivItem"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivItemColor"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toEndOf="@+id/ivItem"
                app:layout_constraintTop_toBottomOf="@+id/tvItemName"
                app:srcCompat="@drawable/item_color_detector" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvItemColorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/black"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintStart_toEndOf="@+id/ivItemColor"
                app:layout_constraintTop_toBottomOf="@+id/tvItemName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVerticalBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/vertical_bar"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tvItemColorName"
                app:layout_constraintTop_toBottomOf="@+id/tvItemName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/qty"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintStart_toEndOf="@+id/tvVerticalBar"
                app:layout_constraintTop_toBottomOf="@+id/tvItemName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvQuantityNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="2"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintStart_toEndOf="@+id/tvQuantity"
                app:layout_constraintTop_toBottomOf="@+id/tvItemName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvItemStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/item_status_background"
                android:padding="10dp"
                android:text="@string/completed"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/ivItem"
                app:layout_constraintTop_toBottomOf="@+id/ivItemColor" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/dollar"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/ivItem"
                app:layout_constraintTop_toBottomOf="@+id/tvItemStatus" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="280.00"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/tvCurrency"
                app:layout_constraintTop_toBottomOf="@+id/tvItemStatus" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/item_review_background"
                android:paddingStart="10dp"
                android:layout_marginTop="8dp"
                android:paddingEnd="10dp"
                android:text="@string/leave_review"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvItemPrice"
                app:layout_constraintTop_toBottomOf="@+id/tvItemStatus" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>